<resources>
    <string name="app_name">SMD_ClassWork</string>
    <string name="enter_name">Enter Name</string>
    <string name="gotosecondavtivity">GotoSecondAvtivity</string>
    <string name="open_dial_pad">Open Dial Pad</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="todo">TODO</string>
    <string name="capture_image">Capture Image</string>
    <string name="imgintentcaptureimage">TODO</string>
    <string name="savemypref">SaveMyPref</string>
    <string name="showmypref">ShowMyPref</string>
    <string name="textview">TextView</string>
    <string name="txtmessage">TextView</string>
    <string name="txtmessage1">TextView</string>
    <string name="save_text_into_file">Save Text Into File</string>
    <string name="name">Name</string>

    <string-array name="contacts_array">
        <item>Ali</item>
        <item>Ahmed</item>
        <item>Uzair</item>
        <item>Nabeel</item>
        <item>Abdullah</item>
        <item>Mubeen</item>
    </string-array>

    <string-array name="details_array">
        <item>Details of Ali</item>
        <item>Details of Ahmed</item>
        <item>Details of Uzair</item>
        <item>Details of Nabeel</item>
        <item>Details of Abdullah</item>
        <item>Details of Mubeen</item>

    </string-array>


    <string name="write_here">write here...</string>
    <string name="show_text">Show Text</string>
    <string name="open_alert_dialog">Open Alert Dialog</string>
    <string name="download_image">Download Image</string>
    <string name="imgasync">TODO</string>
    <string name="download_conmtent">Download Conmtent</string>
    <string name="txt2card">TextView</string>
    <string name="txtcard1">TextView</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="pm_fragment">TextView</string>
    <string name="contacts" />
    <string name="add_contact" />
    <string name="firstname">firstname</string>
    <string name="secondname">secondname</string>
    <string name="phone_number">phone_number</string>
    <string name="email">email</string>
    <string name="home_address">homeaddress</string>
    <string name="buttonsavetosql">buttonsavetosql</string>
    <string name="txtfirstname">TextView</string>
    <string name="txtsecondname">TextView</string>
    <string name="txtphoneno">TextView</string>
    <string name="update" />
    <string name="deletefromdb" />
    <string name="txthomeaddress">TextView</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
    <string name="update1">UPDATE</string>
    <string name="my_sender_application">My Sender Application</string>
</resources>