<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtfirstname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/txtfirstname"
        android:layout_weight="1"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="101dp" />

    <TextView
        android:id="@+id/txtsecondname"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_weight="1"
        android:text="@string/txtsecondname" />

    <TextView
        android:id="@+id/txtphoneno"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_weight="1"
        android:text="@string/txtphoneno" />

    <TextView
        android:id="@+id/txtemailaddress"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/txthomeaddress"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_weight="1"
        android:text="@string/txthomeaddress"
        tools:ignore="HardcodedText"
        />
</LinearLayout>