<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FileHandlingExample.FileHandlingExampleOne">

    <EditText
        android:id="@+id/edtfilehandling"
        android:layout_width="274dp"
        android:layout_height="68dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/write_here"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteY="112dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="255dp"
        android:layout_height="71dp"
        android:layout_marginTop="44dp"
        android:onClick="SaveText"
        android:text="@string/save_text_into_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtfilehandling"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button8"
        android:layout_width="240dp"
        android:layout_height="66dp"
        android:layout_marginTop="36dp"
        android:text="@string/show_text"
        android:onClick="ShowText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <TextView
        android:id="@+id/txtfilehandling"
        android:layout_width="227dp"
        android:layout_height="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

</androidx.constraintlayout.widget.ConstraintLayout>