<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SQLiteExample.NewContactMainActivity"
    tools:ignore="ExtraText">

    <EditText
        android:id="@+id/edtfirstname"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="86dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edtsecondname"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtfirstname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="90dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/secondname"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edtphonenumber"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtsecondname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="92dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="number|textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edtemail"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtphonenumber"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="72dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="91dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress|textPersonName|textEmailSubject"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edthomeaddress"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtemail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="92dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/home_address"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/savebtn"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edthomeaddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="261dp"
        android:onClick="DeleteContact"
        android:text="DELETE DATA" />


</RelativeLayout>